Bug 318322 - kickoff shadow remains
Summary: kickoff shadow remains
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: 4.10.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-14 06:50 UTC by volRot
Modified: 2016-01-15 00:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6
Sentry Crash Report:


Attachments
screenshot of shadow (52.76 KB, image/png)
2013-04-14 18:37 UTC, volRot
Details
Kubuntu 13.10 KDE SC 4.11.2 (363.79 KB, image/png)
2013-10-13 07:42 UTC, volRot
Details
shadow (33.26 KB, image/png)
2013-11-09 08:21 UTC, volRot
Details
Plasma 5.5 screenshot, Vsync options don't help (1.84 MB, image/png)
2015-12-12 12:09 UTC, retired
Details
Support informations (5.36 KB, text/plain)
2015-12-15 14:52 UTC, retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description volRot 2013-04-14 06:50:01 UTC
Hello,
when I click the KMenu open and the mouse on the desktop
(happens only) walks off the menu and the shadow remains, only when I click with the mouse within a program window disappears the shadows. Therefore, a screenshot is not possible.

system:
Intel Core 2 Duo, 3 GB memory ATI X1600 and the free radeon driver, KDE SC 4.10.2

greeting

Reproducible: Always
Comment 1 Martin Flöser 2013-04-14 07:20:52 UTC
of course a screenshot is possible - KSnapshot has a trigger delay.

Please post output of
qdbus org.kde.kwin /KWin supportInformation
Comment 2 Thomas Lübking 2013-04-14 08:01:41 UTC
Sounds like bug #311502 (the fix only affects tooltips, but i guess the kickoff menu has the same bug?)
Comment 3 volRot 2013-04-14 18:37:56 UTC
Created attachment 78900 [details]
screenshot of shadow

Once I click on a new screenshot it's gone, so photographed with a digital camera. Hope you can see the grain is the shadow of KMenu
greeting
Comment 4 Thomas Lübking 2013-04-14 18:49:35 UTC
@plasma devs: please see comment #2

@volker, fyi: ksnapshot has a delay function, you can setup eg. 5 seconds delay, trigger the screenshot, cause the issue, wait until the trigger hits and then have a screenshot w/o having to interact w/ the system after the issue appeared.
Comment 5 volRot 2013-04-14 19:25:57 UTC
@ Thomas Lübking:
I know only the shadow disappears before he enters only on when the mouse is clicked on the desktop. Comes another action Example screenshot activated after X seconds, and the strip is gone
greeting
Comment 6 Martin Flöser 2013-04-15 06:15:46 UTC
could we please get the output requested in comment #1?
Comment 7 volRot 2013-04-15 06:35:59 UTC
Sorry, I had read about it here is

KWin-Unterstützungsinformationen:
Benutzen Sie die folgenden Informationen, wenn Sie nach Unterstützung fragen, z. B. auf http://forum.kde.org.
Sie enthalten Informationen über die momentan laufende Instanz, welche Optionen verwendet werden,
welcher OpenGL-Treiber verwendet wird und welche Effekte laufen.
Bitte geben Sie die untenstehenden Informationen bei einem Pastebin-Dienst wie http://paste.kde.org ein, anstatt sie direkt in die Hilfediskussionen zu schreiben.

==========================

Version
=======
KWin version: 4.10.2
KDE SC version (runtime): 4.10.2
KDE SC version (compile): 4.10.2
Qt Version: 4.8.4

Options
=======
focusPolicy: 0
nextFocusPrefersMouse: false
clickRaise: true
autoRaise: false
autoRaiseInterval: 0
delayFocusInterval: 0
shadeHover: false
shadeHoverInterval: 250
separateScreenFocus: false
activeMouseScreen: true
placement: 4
focusPolicyIsReasonable: true
borderSnapZone: 10
windowSnapZone: 10
centerSnapZone: 0
snapOnlyWhenOverlapping: false
showDesktopIsMinimizeAll: false
rollOverDesktops: true
focusStealingPreventionLevel: 1
legacyFullscreenSupport: false
operationTitlebarDblClick: 
commandActiveTitlebar1: 0
commandActiveTitlebar2: 30                                                                                                                                                                                           
commandActiveTitlebar3: 2                                                                                                                                                                                            
commandInactiveTitlebar1: 4                                                                                                                                                                                          
commandInactiveTitlebar2: 30                                                                                                                                                                                         
commandInactiveTitlebar3: 2                                                                                                                                                                                          
commandWindow1: 7                                                                                                                                                                                                    
commandWindow2: 8                                                                                                                                                                                                    
commandWindow3: 8                                                                                                                                                                                                    
commandWindowWheel: 31                                                                                                                                                                                               
commandAll1: 10                                                                                                                                                                                                      
commandAll2: 3                                                                                                                                                                                                       
commandAll3: 14                                                                                                                                                                                                      
keyCmdAllModKey: 16777251                                                                                                                                                                                            
showGeometryTip: false                                                                                                                                                                                               
condensedTitle: false                                                                                                                                                                                                
electricBorders: false                                                                                                                                                                                               
electricBorderDelay: 150                                                                                                                                                                                             
electricBorderCooldown: 350                                                                                                                                                                                          
electricBorderPushbackPixels: 1
electricBorderMaximize: true
electricBorderTiling: true
electricBorderCornerRatio: 0.25
borderlessMaximizedWindows: false
killPingTimeout: 5000
hideUtilityWindowsForInactive: true
inactiveTabsSkipTaskbar: false
autogroupSimilarWindows: false
autogroupInForeground: true
compositingMode: 1
useCompositing: true
compositingInitialized: true
hiddenPreviews: 1
unredirectFullscreen: false
glSmoothScale: 2
glVSync: true
colorCorrected: false
xrenderSmoothScale: false
maxFpsInterval: 17
refreshRate: 0
vBlankTime: 6144
glDirect: true
glStrictBinding: true
glStrictBindingFollowsDriver: true
glLegacy: false

Screens
=======
Multi-Head: no
Number of Screens: 2
Screen 0 Geometry: 0,0,1680x1050
Screen 1 Geometry: 1680,0,1440x900

Compositing
===========
Qt Graphics System: raster
Compositing is active
Compositing Type: OpenGL
OpenGL vendor string: X.Org R300 Project
OpenGL renderer string: Gallium 0.4 on ATI RV530
OpenGL version string: 2.1 Mesa 9.0.3
OpenGL shading language version string: 1.20
Driver: R300G
GPU class: R500
OpenGL version: 2.1
GLSL version: 1.20
Mesa version: 9.0.3
X server version: 1.13.3
Linux kernel version: 3.8
Direct rendering: yes
Requires strict binding: yes
GLSL shaders:  limited
Texture NPOT support:  limited
Virtual Machine:  no
OpenGL 2 Shaders are not used. Legacy OpenGL 1.x code path is used.

Loaded Effects:
---------------
kwin4_effect_zoom
kwin4_effect_login
kwin4_effect_slidingpopups
kwin4_effect_coverswitch
kwin4_effect_minimizeanimation
kwin4_effect_translucency
kwin4_effect_screenshot
kwin4_effect_cube
kwin4_effect_boxswitch
kwin4_effect_desktopgrid
kwin4_effect_glide
kwin4_effect_maximize
kwin4_effect_fade
kwin4_effect_sheet
kwin4_effect_dialogparent
kwin4_effect_highlightwindow
kwin4_effect_taskbarthumbnail
kwin4_effect_presentwindows
kwin4_effect_logout
kwin4_effect_dashboard
kwin4_effect_outline
kwin4_effect_startupfeedback

Currently Active Effects:
-------------------------

Effect Settings:
----------------
kwin4_effect_zoom:
zoomFactor: 1.2
mousePointer: 0
mouseTracking: 0
enableFocusTracking: false
followFocus: true
focusDelay: 350
moveFactor: 20
targetZoom: 1

kwin4_effect_login:
fadeToBlack: false

kwin4_effect_slidingpopups:
fadeInTime: 125
fadeOutTime: 125

kwin4_effect_coverswitch:
animationDuration: 100
animateSwitch: true
animateStart: true
animateStop: true
reflection: true
windowTitle: true
zPosition: 900
dynamicThumbnails: true
thumbnailWindows: 8
primaryTabBox: true
secondaryTabBox: false

kwin4_effect_minimizeanimation:

kwin4_effect_translucency:
decoration: 1
moveResize: 0.8
dialogs: 1
inactive: 1
comboboxPopups: 1
menus: 1
individualMenuConfig: false
dropDownMenus: 1
popupMenus: 1
tornOffMenus: 1

kwin4_effect_screenshot:

kwin4_effect_cube:
cubeOpacity: 0.800000011920929
opacityDesktopOnly: false
displayDesktopName: true
reflection: true
rotationDuration: 250
backgroundColor: #000000
capColor: #d6cdab
paintCaps: true
closeOnMouseRelease: false
zPosition: 100
useForTabBox: false
invertKeys: false
invertMouse: false
capDeformationFactor: 0
useZOrdering: false
texturedCaps: true

kwin4_effect_boxswitch:

kwin4_effect_desktopgrid:
zoomDuration: 150
border: 10
desktopNameAlignment: 0
layoutMode: 0
customLayoutRows: 2
usePresentWindows: true

kwin4_effect_glide:
duration: 175
effect: 0
angle: -90

kwin4_effect_maximize:

kwin4_effect_fade:

kwin4_effect_sheet:
duration: 250

kwin4_effect_dialogparent:
changeTime: 150

kwin4_effect_highlightwindow:

kwin4_effect_taskbarthumbnail:

kwin4_effect_presentwindows:
layoutMode: 0
showCaptions: true
showIcons: true
doNotCloseWindows: false
ignoreMinimized: false
accuracy: 20
fillGaps: true
fadeDuration: 75
showPanel: false
leftButtonWindow: 1
rightButtonWindow: 2
middleButtonWindow: 0
leftButtonDesktop: 2
middleButtonDesktop: 0
rightButtonDesktop: 0
dragToClose: false

kwin4_effect_logout:
useBlur: true

kwin4_effect_dashboard:
brightness: 0.5
saturation: 0.5
blur: false

kwin4_effect_outline:

kwin4_effect_startupfeedback:
Comment 8 volRot 2013-07-10 06:03:08 UTC
This problem is in 4.10.2 - 4.10.5 only in kubuntu! I have not a problem with Sabayon or Arch.
Comment 9 Thomas Lübking 2013-10-12 11:36:12 UTC
What's the state about this?
Still an issue on current Ubuntu versions?
Comment 10 volRot 2013-10-13 07:23:23 UTC
Now I have done a update on 13.10. KDE SC is now 4.11.2.
Shadow is unfortunately still there after close of kmenues. After a click on the free desktop disappears this area.
Graphics card is now an Intel HD 4000 (New Laptop)
(Google translator)

Greeting
Comment 11 volRot 2013-10-13 07:42:39 UTC
Created attachment 82818 [details]
Kubuntu 13.10 KDE SC 4.11.2

shadow after close kmenu
Comment 12 Martin Flöser 2013-10-14 16:01:44 UTC
are you using kickoff or the "classic" menu?
Comment 13 volRot 2013-10-15 08:35:17 UTC
Use the menu installed by default, kickoff
Comment 14 volRot 2013-11-09 07:00:20 UTC
Hello,

somehow the remaining shadow in 4.11.3 is now even stronger.
Error occurs, especially if the info turns off by itself.

Tested under Arch Linux with KDE 4.11.3
Comment 15 volRot 2013-11-09 08:21:19 UTC
Created attachment 83443 [details]
shadow
Comment 16 Thomas Lübking 2013-11-09 14:29:54 UTC
Despite I believe it's just bug #311502, can you please attach the output of "qdbus org.kde.kwin /KWin supportInformation" (since it doesn't happen here)
Comment 17 volRot 2013-11-09 20:13:29 UTC
Helo,
qdbus org.kde.kwin / KWin support information
bash: qdbus: Command not found.
is the answer. Will not work on Arch.
greeting
Comment 18 Thomas Lübking 2013-11-09 20:52:28 UTC
(In reply to comment #17)
> bash: qdbus: Command not found.

qdbus-qt4 org.kde.kwin / KWin support information

(i'd suggest to also symlink qdbus to qdbus-qt4 for the time being - some scripts etc. might fail on this)
Comment 19 volRot 2013-11-10 08:00:48 UTC
Thanks, and here the required information


KWin-Unterstützungsinformationen:
Benutzen Sie die folgenden Informationen, wenn Sie nach Unterstützung fragen, z. B. auf http://forum.kde.org.
Sie enthalten Informationen über die momentan laufende Instanz, welche Optionen verwendet werden,
welcher OpenGL-Treiber verwendet wird und welche Effekte laufen.
Bitte geben Sie die untenstehenden Informationen bei einem Pastebin-Dienst wie http://paste.kde.org ein, anstatt sie direkt in die Hilfediskussionen zu schreiben.

==========================

Version
=======
KWin version: 4.11.3
KDE SC version (runtime): 4.11.3
KDE SC version (compile): 4.11.3
Qt Version: 4.8.5

Options
=======
focusPolicy: 0
nextFocusPrefersMouse: false
clickRaise: true
autoRaise: false
autoRaiseInterval: 0
delayFocusInterval: 0
shadeHover: false
shadeHoverInterval: 250
separateScreenFocus: false
placement: 4
focusPolicyIsReasonable: true
borderSnapZone: 10
windowSnapZone: 10
centerSnapZone: 0
snapOnlyWhenOverlapping: false
showDesktopIsMinimizeAll: false
rollOverDesktops: true
focusStealingPreventionLevel: 1
legacyFullscreenSupport: false
operationTitlebarDblClick: 
commandActiveTitlebar1: 0
commandActiveTitlebar2: 30
commandActiveTitlebar3: 2
commandInactiveTitlebar1: 4
commandInactiveTitlebar2: 30
commandInactiveTitlebar3: 2
commandWindow1: 7
commandWindow2: 8
commandWindow3: 8
commandWindowWheel: 31
commandAll1: 10
commandAll2: 3
commandAll3: 14
keyCmdAllModKey: 16777251
showGeometryTip: false
condensedTitle: false
electricBorderMaximize: true
electricBorderTiling: true
electricBorderCornerRatio: 0.25
borderlessMaximizedWindows: false
killPingTimeout: 5000
hideUtilityWindowsForInactive: true
inactiveTabsSkipTaskbar: false
autogroupSimilarWindows: false
autogroupInForeground: true
compositingMode: 1
useCompositing: true
compositingInitialized: true
hiddenPreviews: 1
unredirectFullscreen: false
glSmoothScale: 2
colorCorrected: false
xrenderSmoothScale: false
maxFpsInterval: 16666666
refreshRate: 0
vBlankTime: 6000000
glDirect: true
glStrictBinding: false
glStrictBindingFollowsDriver: true
glLegacy: false
glCoreProfile: true
glPreferBufferSwap: 101

Screen Edges
============
desktopSwitching: false
desktopSwitchingMovingClients: false
cursorPushBackDistance: 
timeThreshold: 150
reActivateThreshold: 350
actionTopLeft: 0
actionTop: 0
actionTopRight: 0
actionRight: 0
actionBottomRight: 0
actionBottom: 0
actionBottomLeft: 0
actionLeft: 0

Screens
=======
Multi-Head: no
Active screen follows mouse:  yes
Number of Screens: 2
Screen 0 Geometry: 0,0,1920x1080
Screen 1 Geometry: 1920,0,1024x768

Decoration
==========
Current Plugin: kwin3_aurorae
Shadows: yes
Alpha: yes
Announces Alpha: yes
Tabbing: no
Frame Overlap: yes
Blur Behind: yes

Compositing
===========
Qt Graphics System: raster
Compositing is active
Compositing Type: OpenGL
OpenGL vendor string: Intel Open Source Technology Center
OpenGL renderer string: Mesa DRI Intel(R) Ivybridge Mobile 
OpenGL version string: 3.1 (Core Profile) Mesa 9.2.2
OpenGL shading language version string: 1.40
Driver: Intel
GPU class: IvyBridge
OpenGL version: 3.1
GLSL version: 1.40
Mesa version: 9.2.2
X server version: 1.14.4
Linux kernel version: 3.11.6
Direct rendering: yes
Requires strict binding: no
GLSL shaders:  yes
Texture NPOT support:  yes
Virtual Machine:  no
OpenGL 2 Shaders are used
Painting blocks for vertical retrace:  no

Loaded Effects:
---------------
kwin4_effect_zoom
kwin4_effect_slidingpopups
kwin4_effect_login
kwin4_effect_minimizeanimation
kwin4_effect_scalein
kwin4_effect_screenshot
kwin4_effect_desktopgrid
kwin4_effect_translucency
kwin4_effect_glide
kwin4_effect_maximize
kwin4_effect_fade
kwin4_effect_sheet
kwin4_effect_highlightwindow
kwin4_effect_taskbarthumbnail
kwin4_effect_dialogparent
kwin4_effect_presentwindows
kwin4_effect_logout
kwin4_effect_dashboard
kwin4_effect_screenedge
kwin4_effect_startupfeedback
kwin4_effect_kscreen

Currently Active Effects:
-------------------------

Effect Settings:
----------------
kwin4_effect_zoom:
zoomFactor: 1.2
mousePointer: 0
mouseTracking: 0
enableFocusTracking: false
followFocus: true
focusDelay: 350
moveFactor: 20
targetZoom: 1

kwin4_effect_slidingpopups:
fadeInTime: 50
fadeOutTime: 50

kwin4_effect_login:

kwin4_effect_minimizeanimation:

kwin4_effect_scalein:

kwin4_effect_screenshot:

kwin4_effect_desktopgrid:
zoomDuration: 60
border: 10
desktopNameAlignment: 0
layoutMode: 0
customLayoutRows: 2
usePresentWindows: true

kwin4_effect_translucency:

kwin4_effect_glide:
duration: 70
effect: 0
angle: -90

kwin4_effect_maximize:

kwin4_effect_fade:

kwin4_effect_sheet:
duration: 100

kwin4_effect_highlightwindow:

kwin4_effect_taskbarthumbnail:

kwin4_effect_dialogparent:

kwin4_effect_presentwindows:
layoutMode: 0
showCaptions: true
showIcons: true
doNotCloseWindows: false
ignoreMinimized: false
accuracy: 20
fillGaps: true
fadeDuration: 30
showPanel: false
leftButtonWindow: 1
rightButtonWindow: 2
middleButtonWindow: 0
leftButtonDesktop: 2
middleButtonDesktop: 0
rightButtonDesktop: 0
dragToClose: false

kwin4_effect_logout:
useBlur: true

kwin4_effect_dashboard:
brightness: 0.5
saturation: 0.5
blur: false

kwin4_effect_screenedge:

kwin4_effect_startupfeedback:

kwin4_effect_kscreen:
Comment 20 volRot 2014-01-24 08:40:52 UTC
Error is no longer present in 4.12
greeting
Comment 21 retired 2015-12-12 12:07:29 UTC
Kickoff seems to leave shadow  after it's gone.
Plasma 5.5.0
Qt 5.5.1
Nvidia 358.16
Comment 22 retired 2015-12-12 12:09:58 UTC
Created attachment 96009 [details]
Plasma 5.5 screenshot, Vsync options don't help
Comment 23 Thomas Lübking 2015-12-12 14:02:38 UTC
https://git.reviewboard.kde.org/r/126323/
Comment 24 retired 2015-12-14 15:55:43 UTC
(In reply to Thomas Lübking from comment #23)
> https://git.reviewboard.kde.org/r/126323/

I have patched kwin from abs. It's not helping. Unless it's more of a long term goal.
Comment 25 Thomas Lübking 2015-12-14 20:40:35 UTC
Ok, actually this *can* not work since whatever it's called, at least the default plasma application launcher doesn't use the sliding popups effect (here)

I however neither get such artifacts.
Can you please attach the output of "qdbus org.kde.KWin /KWin supportInformation"?
Comment 26 retired 2015-12-15 14:52:19 UTC
Created attachment 96088 [details]
Support informations
Comment 27 Thomas Lübking 2015-12-15 17:05:51 UTC
The scale in effect saves the day.
I can reproduce it here w/o. The runner actually does set the slide hint, but the animation runs hyperfast (37ms and the slidelength is 0 ... ie. it's pointless to begin with)

Long story short: the deleted has no expandedGeometry, ie. it must have lost the shadow in the scene window, no idea why, yet.
Comment 28 Thomas Lübking 2015-12-15 22:50:18 UTC
See updated patch on reviewboard - I bet your arm on it ;-)
Comment 29 retired 2015-12-16 14:51:18 UTC
Phew, my arm will be fine, for now.
Thanks, ghost shadow is gone. Tested with 5.5.1 as it went to stable today.
Comment 30 Thomas Lübking 2015-12-16 15:19:40 UTC
You didn't think I'd offer my own?
Please notice that for the more invasive nature of the patch it will only point current master (ie. 5.6) - it could cause worse than some graphical artifacts.
Comment 31 retired 2015-12-16 15:33:44 UTC
(In reply to Thomas Lübking from comment #30)
> You didn't think I'd offer my own?
> Please notice that for the more invasive nature of the patch it will only
> point current master (ie. 5.6) - it could cause worse than some graphical
> artifacts.

Feel free to make it stable ;-)
Comment 32 Thomas Lübking 2016-01-14 23:18:33 UTC
Git commit 57c9aa9fc03d8af1afd63b43c136894cdef621d2 by Thomas Lübking.
Committed on 14/01/2016 at 22:37.
Pushed by luebking into branch 'master'.

update expanded geometry when slide is done

In addition it's required to keep the expandedGeometry alive until
the effects handled the deletion
Related: bug 320892, bug 344359
REVIEW: 126323

FIXED-IN: 5.6

M  +1    -1    effects/slidingpopups/slidingpopups.cpp

http://commits.kde.org/kwin/57c9aa9fc03d8af1afd63b43c136894cdef621d2
Comment 33 Thomas Lübking 2016-01-15 00:39:30 UTC
Git commit 87795eef2a71d85680f797fe75404ca1a9a63a10 by Thomas Lübking.
Committed on 15/01/2016 at 00:37.
Pushed by luebking into branch 'master'.

Actually keep the expandedGeometry alive

... until the effects handled the deletion
Related: bug 320892, bug 344359
REVIEW: 126323

FIXED-IN: 5.6

M  +1    -1    composite.cpp

http://commits.kde.org/kwin/87795eef2a71d85680f797fe75404ca1a9a63a10