update expanded geometry when slide is done

In addition it's required to keep the expandedGeometry alive until
the effects handled the deletion

BUG: 318322
BUG: 320892
BUG: 344359
REVIEW: 126323

FIXED-IN: 5.6